<resources>
    <string name="app_name">x-info</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Start</string>
    <string name="name">Name</string>
    <string name="new_file">New file</string>
    <string name="password">Password</string>
    <string name="email">E-mail</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="login">Login</string>
    <string name="open">Open</string>
    <string name="error">Error</string>
    <string name="enter_text">Enter text</string>
    <string name="new_repository">New repository</string>
    <string name="repository">Repository</string>
    <string name="log">Log</string>
    <string name="сonfirm">Confirm</string>
    <string name="repository_list">Repository list</string>
    <string name="open_repository">Open repository</string>
    <string name="ok">Ok</string>
    <string name="repository_not_found">Repository not found</string>
    <string name="repository_is_not_correct">Repository is not correct</string>
    <string name="new_password_is_not_correct">New password is not correct</string>
    <string name="password_is_not_correct">Password is not correct</string>
    <string name="password_not_specified">Password not specified</string>
    <string name="edit_password">Edit password</string>
    <string name="delete_repository">Delete repository</string>
    <string name="field_repository_must_contain">The \"Repository\" shall contain Latin characters and numbers. from 3 to 50 characters</string>
    <string name="field_directory_must_contain">The \"Directory\" shall contain Latin characters and numbers. from 1 to 50 characters</string>
    <string name="all_fields_must_be_filled">All fields must not be empty</string>
    <string name="сonfirm_password_is_different">Confirm password is different</string>
    <string name="_already_exists">- already exists</string>
    <string name="new_password">New password</string>
    <string name="repository_name_to_delete">Enter the repository name to delete</string>
    <string name="oops">Oops. :(</string>
    <string name="icon">Icon</string>
    <string name="directory">Directory</string>
    <string name="new_directory">New directory</string>
    <string name="repository_is_not_connected">The repository is not connected</string>
    <string name="repository_write_error">Repository write error</string>
    <string name="node_not_found">Node not found</string>
    <string name="new_card">New card</string>
    <string name="rename_directory">Rename directory</string>
    <string name="edit_card">Edit card</string>
    <string name="add_login">Add login</string>
    <string name="add_password">Add password</string>
    <string name="add_email">Add email</string>
    <string name="field_name_is_not_specified">Field \"name\" is not specified</string>
    <string name="to_add_fields_press_menu">To add fields, press ︙ and select the desired field type. The new field will be added after the currently edited one. Empty fields will be removed automatically.</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure_about_that">Are you sure about that?</string>
    <string name="cancel">Сancel</string>
    <string name="open_as_text">Open as text</string>
    <string name="text_file">Text file</string>
    <string name="explorer">Explorer</string>
    <string name="card">Card</string>
    <string name="not_filled">Not filled</string>
    <string name="invalid_file_name_characters">Invalid characters \\ /: *?\"\' «≤> |»</string>
    <string name="max_size_128_chars">Maximum size 128 characters</string>
    <string name="less_than_8_characters">Less_than_8_characters</string>
    <string name="must_contain_uppercase_characters">Must contain uppercase characters</string>
    <string name="must_contain_lowercase_characters">Must contain lowercase characters</string>
    <string name="must_contain_numbers">Must contain numbers</string>
    <string name="wait">Wait...</string>
    <string name="confirm">Confirm</string>
    <string name="payment_card">Payment card</string>
    <string name="add_payment_card">Add payment card</string>
</resources>