<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.plexyze.xinfo.repository.EditPasswordRepositoryViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".repository.EditPasswordRepositoryFragment">

            <com.plexyze.xinfo.ui.TitleTextInput
                android:id="@+id/repository"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/repository"
                app:text="@{viewModel.repository}"/>

            <com.plexyze.xinfo.ui.TitleTextInput
                android:id="@+id/oldPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textWebPassword"
                app:enabled="true"
                app:eventChange="@{viewModel.oldPasswordChange}"
                app:title="@string/password"
                app:text="@{viewModel.oldPassword}"/>

            <com.plexyze.xinfo.ui.TitleTextInput
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textWebPassword"
                app:enabled="true"
                app:eventChange="@{viewModel.passwordChange}"
                app:title="@string/new_password"
                app:text="@{viewModel.password}"/>

            <com.plexyze.xinfo.ui.TitleTextInput
                android:id="@+id/confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textWebPassword"
                app:enabled="true"
                app:eventChange="@{viewModel.confirmChange}"
                app:title="@string/сonfirm"
                app:text="@{viewModel.confirm}"/>

            <Button
                android:id="@+id/btn_new_repository"
                style="@style/ButtonStyle"
                android:background="@drawable/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="@{viewModel.bntEnabled}"
                android:onClick="@{()->viewModel.editPassword()}"
                android:text="@string/edit_password" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Log"
                android:text="@{viewModel.log}" />

        </LinearLayout>
    </ScrollView>

</layout>