<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data></data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".cardinfo.CardInfoFragment">

        <Button
            android:id="@+id/btnSave"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:text="✔"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnEdit"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:text="✎"
            app:layout_constraintEnd_toStartOf="@+id/btnSave"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.plexyze.xinfo.ui.TitleTextInput
            android:id="@+id/fileName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/name"
            app:text=""
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnSave"/>

        <com.plexyze.xinfo.ui.TitleTextInput
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/login"
            app:text=""
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fileName"/>

        <com.plexyze.xinfo.ui.TitleTextInput
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/password"
            app:text=""
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/login"/>

        <com.plexyze.xinfo.ui.TitleTextInput
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/email"
            app:text=""
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/password">

        </com.plexyze.xinfo.ui.TitleTextInput>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>