<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title"
        style="@style/FieldHeaderStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/text"
        style="@style/FieldStyle"
        android:background="@drawable/edit_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/enter_text"
        android:selectAllOnFocus="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Button
        android:id="@+id/btnCopy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:alpha="0.001"
        style="@style/FieldStyle"
        app:layout_constraintBottom_toBottomOf="@+id/text"
        app:layout_constraintStart_toStartOf="@+id/text" />

    <TextView
        android:id="@+id/error"
        style="@style/ErrorLog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:text="@string/error"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text" />


</androidx.constraintlayout.widget.ConstraintLayout>
