<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.plexyze.xinfo.repository.DeleteRepositoryViewModel" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".repository.DeleteRepositoryFragment">

            <com.plexyze.xinfo.ui.TitleTextInput
                android:id="@+id/repository"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:title="@string/repository"
                app:text="@{viewModel.repository}"/>


            <com.plexyze.xinfo.ui.TitleTextInput
                android:id="@+id/confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:enabled="true"
                app:eventChange="@{viewModel.confirmChange}"
                app:title="@string/сonfirm"
                app:text="@{viewModel.confirm}"/>

            <Button
                android:id="@+id/btn_new_repository"
                style="@style/ButtonStyle"
                android:background="@drawable/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="@{viewModel.bntEnabled}"
                android:onClick="@{()->viewModel.delete()}"
                android:text="@string/delete_repository" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Log"
                android:text="@{viewModel.log}" />

        </LinearLayout>
    </ScrollView>


</layout>