<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav"
    app:startDestination="@id/repositoryListFragment">

    <fragment
        android:id="@+id/repositoryListFragment"
        android:name="com.plexyze.xinfo.repository.RepositoryListFragment"
        android:label="@string/repository_list"
        tools:layout="@layout/fragment_repository_list">
        <action
            android:id="@+id/action_repositoryListFragment_to_newRepositoryFragment"
            app:destination="@id/newRepositoryFragment" />
        <action
            android:id="@+id/action_repositoryListFragment_to_openRepositoryFragment"
            app:destination="@id/openRepositoryFragment" />
        <action
            android:id="@+id/action_repositoryListFragment_to_editPasswordRepositoryFragment"
            app:destination="@id/editPasswordRepositoryFragment" />
        <action
            android:id="@+id/action_repositoryListFragment_to_editPasswordRepositoryFragment2"
            app:destination="@id/editPasswordRepositoryFragment" />
        <action
            android:id="@+id/action_repositoryListFragment_to_deleteRepositoryFragment"
            app:destination="@id/deleteRepositoryFragment" />
    </fragment>

    <fragment
        android:id="@+id/newRepositoryFragment"
        android:name="com.plexyze.xinfo.repository.NewRepositoryFragment"
        android:label="@string/new_repository"
        tools:layout="@layout/new_repository_fragment">
        <action
            android:id="@+id/action_newRepositoryFragment_to_repositoryListFragment"
            app:destination="@id/repositoryListFragment"
            app:popUpTo="@id/repositoryListFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/openRepositoryFragment"
        android:name="com.plexyze.xinfo.repository.OpenRepositoryFragment"
        android:label="@string/open_repository"
        tools:layout="@layout/open_repository_fragment">
        <argument
            android:name="repository"
            app:argType="string" />
        <action
            android:id="@+id/action_openRepositoryFragment_to_cardListFragment"
            app:destination="@id/cardListFragment"
            app:popUpTo="@id/openRepositoryFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/editPasswordRepositoryFragment"
        android:name="com.plexyze.xinfo.repository.EditPasswordRepositoryFragment"
        android:label="@string/edit_password"
        tools:layout="@layout/edit_password_repository_fragment">
        <action
            android:id="@+id/action_editPasswordRepositoryFragment_to_repositoryListFragment"
            app:destination="@id/repositoryListFragment"
            app:popUpTo="@id/repositoryListFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="repository"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/deleteRepositoryFragment"
        android:name="com.plexyze.xinfo.repository.DeleteRepositoryFragment"
        android:label="@string/delete_repository"
        tools:layout="@layout/delete_repository_fragment">
        <action
            android:id="@+id/action_deleteRepositoryFragment_to_repositoryListFragment"
            app:destination="@id/repositoryListFragment"
            app:popUpTo="@id/repositoryListFragment"
            app:popUpToInclusive="true" />
        <argument
            android:name="repository"
            app:argType="string" />
    </fragment>

    <fragment
        android:id="@+id/cardListFragment"
        android:name="com.plexyze.xinfo.cardlist.CardListFragment"
        android:label="fragment_home"
        tools:layout="@layout/fragment_card_list">
        <action
            android:id="@+id/action_homeFragment_to_cardInfoFragment"
            app:destination="@id/cardInfoFragment" />
    </fragment>
    <fragment
        android:id="@+id/cardInfoFragment"
        android:name="com.plexyze.xinfo.cardinfo.CardInfoFragment"
        android:label="fragment_card_info"
        tools:layout="@layout/fragment_card_info">
        <argument
            android:name="id"
            app:argType="long" />
    </fragment>



</navigation>