<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.plexyze.xinfo.explorer.RenameDirectoryViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".explorer.RenameDirectoryFragment">

            <com.plexyze.xinfo.ui.TitleSpinner
                android:id="@+id/icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:enabled="true"
                app:title="@string/icon"
                app:options="@{viewModel.icons}"
                app:text="@{viewModel.icon}"
                app:eventChange="@{viewModel.iconChange}" />

            <com.plexyze.xinfo.ui.TitleTextInput
                android:id="@+id/directory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType = "textWebEmailAddress"
                app:enabled="true"
                app:title="@string/directory"
                app:eventChange="@{viewModel.directoryChange}"
                app:text="@{viewModel.directory}"
                app:error = "@{viewModel.directoryError}"/>


            <Button
                android:id="@+id/btn_new_repository"
                style="@style/ButtonStyle"
                android:background="@drawable/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="@{viewModel.bntEnabled}"
                android:onClick="@{()->viewModel.saveDirectory()}"
                android:text="@string/edit_password" />



            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Log"
                android:text="@{viewModel.log}" />

        </LinearLayout>
    </ScrollView>


</layout>