<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.plexyze.xinfo.card.EditCardViewModel" />
        <variable
            name="thisFragment"
            type="com.plexyze.xinfo.card.EditCardFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".card.EditCardFragment">

            <com.plexyze.xinfo.ui.TitleSpinner
                android:id="@+id/icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:enabled="true"
                app:title="@string/icon"
                app:options="@{thisFragment.icons}"
                app:text="@{viewModel.icon}"
                app:eventChange="@{viewModel.iconChange}"/>

            <com.plexyze.xinfo.ui.TitleTextInput
                android:id="@+id/card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textWebEmailAddress"
                app:enabled="true"
                app:title="@string/name"
                app:eventChange="@{viewModel.nameChange}"
                app:text="@{viewModel.name}"/>

            <LinearLayout
                android:id="@+id/fields"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"/>

            <Button
                android:id="@+id/btn_save"
                style="@style/ButtonStyle"
                android:background="@drawable/button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="@{viewModel.bntEnabled}"
                android:text="@string/save" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Log"
                android:text="@{viewModel.log}" />

        </LinearLayout>

    </ScrollView>

</layout>